--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -12,11 +12,12 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        os: [ubuntu-latest, macos-13]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        pip install numpy numba
+        pip install "numpy<2.0" numba
         pip install torch --index-url https://download.pytorch.org/whl/cpu
     - name: Lint with flake8
       run: |
