--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools
+        pip install setuptools numpy
         pip install torch --index-url https://download.pytorch.org/whl/cpu
     - name: Build package
       run: python setup.py sdist
